# coub-replay

./: .gitignore  CMakeLists.txt  LICENSE  README.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.svelte  context.svelte.ts  global.d.ts  main.ts
frontend/src/components/: CoubInfo.svelte  Divider.svelte  Download.svelte  DropZone.svelte  Footer.svelte  Home.svelte  LoadFromFile.svelte  Player.svelte
frontend/src/coub-replay/: serialization.ts
frontend/src/coub-replay/serialization/: coub-media.ts  coub-metadata.ts  coub.ts
frontend/src/css/: minstyle.io.css  style.css
frontend/src/schemas/: coub.fbs
frontend/src/services/: cors-proxy.ts  coub-downloader.ts  coub-serializer.ts  event-bus.ts  utils.ts
src/: main.cpp  messages.cpp  messages.hpp
